edit the new page

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 
 <body>
     <nav>
-        <div class="logo">KEIO</div>
+        <div class="logo">
+            <a href="index.html">KEIO</a></div>
         <div class="nav-items">
-            <a href="#">Home</a>
-            <a href="#">Contract</a>
+            <a href="index.html" class="active">Home</a>
+            <a href="contract.html">Contract</a>
             <a href="#">Support</a>
         </div>
     </nav>
@@ -26,10 +27,22 @@
         <div class="column-left">
             <h1>The Fastest Internet in Dublin</h1>
             <p>No contracts or unwanted fees. Exclusive offer for new customers only.</p>
-            <button>Explore</button>
+            <button>HIRE</button>
         </div>
-        <div class="column-rigth">
-            <img src="image-1.svg" alt="transfert data" class="hero-image">
+        <div class="column-center">
+            <img src="gallery/heart.gif" alt="A phone taken pulse" class="gallery-image">
+            <img src="gallery/smartphone.gif" alt="shaking the phone" class="gallery-image">
+            <img src="gallery/wifi.gif" alt="wifi" class="gallery-image">
+        </div>
+        <div class="wrapper">
+        <div class="static-txt">I Need</div>
+        <ul class="dynamic-texts">
+            <li><span>Speed</span></li>
+            <li><span>5G</span></li>
+            <li><span>Connection</span></li>
+            <li><span>KEIO</span></li>
+            
+        </ul>
         </div>
     </section>
 </body>
