--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="nav-items">
             <a href="index.html" class="active">Home</a>
             <a href="contract.html">Contract</a>
-            <a href="#">Support</a>
+            <a href="support.html">Support</a>
         </div>
     </nav>
     <section class="hero">
@@ -27,7 +27,7 @@
         <div class="column-left">
             <h1>The Fastest Internet in Dublin</h1>
             <p>No contracts or unwanted fees. Exclusive offer for new customers only.</p>
-            <button>HIRE</button>
+            <a href="contract.html" class="button" target="_blank">HIRE</a>
         </div>
         <div class="column-center">
             <img src="gallery/heart.gif" alt="A phone taken pulse" class="gallery-image">
